# morpho-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
help/: errors.md  string.md
make/: XMakefile
src/: CMakeLists.txt  Makefile  cli.c  cli.h  debugger.c  debugger.h  help.c  help.h  linedit.c  linedit.h  main.c
